finished without background

--- a/index.html
+++ b/index.html
@@ -8,24 +8,37 @@
   </head>
   <body>
     <section>
-      <div class="white"></div>
-      <div class="white"></div>
-      <div class="black"></div>
-      <div class="white"></div>
-      <div class="black"></div>
-      <div class="white"></div>
-      <div class="white"></div>
-      <div class="black"></div>
-      <div class="white"></div>
-      <div class="black"></div>
-      <div class="white"></div>
-      <div class="black"></div>
-      <div class="white"></div>
-      <div class="white"></div>
-      <div class="black"></div>
-      <div class="white"></div>
-      <div class="black"></div>
-      <div class="white"></div>
+      <div class="white"><p class="ltrw">C</p></div>
+      <div class="white"><p class="ltrw">B</p></div>
+      <div class="black"><p class="ltrb">A#</p></div>
+      <div class="white"><p class="ltrw">A</p></div>
+      <div class="black"><p class="ltrb">G#</p></div>
+      <div class="white"><p class="ltrw">G</p></div>
+      <div class="black"><p class="ltrb">F#</p></div>
+      <div class="white"><p class="ltrw">F</p></div>
+      <div class="white"><p class="ltrw">E</p></div>
+      <div class="black"><p class="ltrb">D#</p></div>
+      <div class="white"><p class="ltrw">D</p></div>
+      <div class="black"><p class="ltrb">C#</p></div>
+      <div class="white"><p class="ltrw">C</p></div>
+      <div class="white"><p class="ltrw">F</p></div>
+      <div class="white"><p class="ltrw">E</p></div>
+      <div class="black"><p class="ltrb">D#</p></div>
+      <div class="white"><p class="ltrw">D</p></div>
+      <div class="black"><p class="ltrb">C#</p></div>
+      <div class="white"><p class="ltrw">C</p></div>
+      <div class="white"><p class="ltrw">B</p></div>
+      <div class="black"><p class="ltrb">A#</p></div>
+      <div class="white"><p class="ltrw">A</p></div>
+      <div class="black"><p class="ltrb">G#</p></div>
+      <div class="white"><p class="ltrw">G</p></div>
+      <div class="black"><p class="ltrb">F#</p></div>
+      <div class="white"><p class="ltrw">F</p></div>
+      <div class="white"><p class="ltrw">E</p></div>
+      <div class="black"><p class="ltrb">D#</p></div>
+      <div class="white"><p class="ltrw">D</p></div>
+      <div class="black"><p class="ltrb">C#</p></div>
+      <div class="white"><p class="ltrw">C</p></div>
     </section>
   </body>
 </html>
