--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>PianoAssignment</title>
   </head>
   <body>
+    <h1>Learn how piano octaves align!</h1>
     <section>
       <div class="white"><p class="ltrw">C</p></div>
       <div class="white"><p class="ltrw">B</p></div>
